added search functionality using api and minor changes to styling

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="weather-app-data">
-            <h1 id="weather-app-city">Harare</h1>
+            <h1 id="city">Harare</h1>
             <h2>Sunday 20:00</h2>
             </br>
             </br>
@@ -42,8 +42,10 @@
             <div class="descriptionRow">
                 <div class="col-6">
                     <h3>Clear Skies</h3>
-                    <div class="mainTemp">
-                        26 C&deg | F&deg
+                    <div class="mainTemp" id="temperature">
+                        26 </div>
+                    <div class="weather-app-unit" id="weather-units">
+                        C&deg | F&deg
                     </div>
                 </div>
                 <div class="col-6">
