created live weather conditions using API

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </div>
         <div class="weather-app-data">
             <h1 id="city">Harare</h1>
-            <h2>Sunday 20:00</h2>
+            <h2 id="time"></h2>
             </br>
             </br>
 
             <div class="descriptionRow">
                 <div class="col-6">
-                    <h3>Clear Skies</h3>
+                    <h3 id="description">Clear Skies</h3>
                     <div class="mainTemp" id="temperature">
                         26 </div>
                     <div class="weather-app-unit" id="weather-units">
@@ -57,15 +57,15 @@
                 <div class="col-12">
                     <ul class="weather-app-details">
                         <li>
-                            <strong>Percipitation:</strong> 12%
+                            <strong>Feels-like:</strong> <span id="feels-like"></span>
                         </li>
                         </br>
                         <li>
-                            <strong>Humidity: </strong> 90%
+                            <strong>Humidity: </strong> <span id="humidity"></span>
                         </li>
                         </br>
                         <li>
-                            <strong>Wind:</strong> 2mph
+                            <strong>Wind:</strong> <span id="speed"></span>
                         </li>
                     </ul>
                 </div>
