added responsice weather icon from api

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <img class="main-weather-icon" src="images/clear.png">
+                    <div id="icon">
+
+                    </div>
                 </div>
             </div>
 
@@ -104,13 +106,13 @@
                     <img class="icon" src="images/drizzle.png">
                 </div>
                 <div class="col-2">
-                    <img class="icon" src="images/clear.png">
+                    <img class="icon" src="images/clear-sky-day.png">
                 </div>
                 <div class="col-2">
-                    <img class="icon" src="images/clear.png">
+                    <img class="icon" src="images/clear-sky-day.png">
                 </div>
                 <div class="col-2">
-                    <img class="icon" src="images/rain.png">
+                    <img class="icon" src="images/rain-day.png">
                 </div>
             </div>
 
@@ -138,7 +140,7 @@
 
         <footer>
             <div class="codedBy"><a href="https://github.com/maktub03/vanilla-weather-app"> Open-source code </a>by,
-                <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/"> Panashe Machiridza </a>
+                <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/"> Panashe </a>
             </div>
         </footer>
 
