added forecast html and css

--- a/index.html
+++ b/index.html
@@ -76,81 +76,31 @@
 
             <div class="row">
                 <div class="col-2">
-                    Monday
-                </div>
-                <div class="col-2">
-                    Tuesday
-                </div>
-                <div class="col-2">
-                    Wednesday
-                </div>
-                <div class="col-2">
-                    Thursday
-                </div>
-                <div class="col-2">
-                    Friday
-                </div>
-                <div class="col-2">
-                    Saturday
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-2">
+                    <div class="weather-forecast-date">
+                        Monday
+                    </div>
                     <img class="icon" src="images/clouds.png">
-                </div>
-                <div class="col-2">
-                    <img class="icon" src="images/clouds.png">
-                </div>
-                <div class="col-2">
-                    <img class="icon" src="images/drizzle.png">
-                </div>
-                <div class="col-2">
-                    <img class="icon" src="images/clear-sky-day.png">
-                </div>
-                <div class="col-2">
-                    <img class="icon" src="images/clear-sky-day.png">
-                </div>
-                <div class="col-2">
-                    <img class="icon" src="images/rain-day.png">
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-2">
-                    25°|15°
-                </div>
-                <div class="col-2">
-                    27°|15°
-                </div>
-                <div class="col-2">
-                    28°|15°
-                </div>
-                <div class="col-2">
-                    29°|13°
-                </div>
-                <div class="col-2">
-                    31°|14°
-                </div>
-                <div class="col-2">
-                    32°15°
+                    <div class="weather-forecast-temp">
+                        <span class="weather-forecast-temp-max">25°</span> |
+                        <span class="weather-forecast-temp-min">15°</span>
+
+                    </div>
                 </div>
             </div>
+            <footer>
+                <div class="codedBy"><a href="https://github.com/maktub03/vanilla-weather-app"> Open-source code </a>by,
+                    <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/"> Panashe </a>
+                </div>
+            </footer>
+
         </div>
 
-        <footer>
-            <div class="codedBy"><a href="https://github.com/maktub03/vanilla-weather-app"> Open-source code </a>by,
-                <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/"> Panashe </a>
-            </div>
-        </footer>
-
-    </div>
 
 
 
 
-
-    <script src="src/content.js"></script>
+        <script src="src/content.js"></script>
     </div>
     </div>
 </body>
