--- a/index.html
+++ b/index.html
@@ -74,34 +74,23 @@
             </div>
 
 
-            <div class="row">
-                <div class="col-2">
-                    <div class="weather-forecast-date">
-                        Monday
-                    </div>
-                    <img class="icon" src="images/clouds.png">
+            <div class="weather-forecast" id="forecast">
 
-                    <div class="weather-forecast-temp">
-                        <span class="weather-forecast-temp-max">25°</span> |
-                        <span class="weather-forecast-temp-min">15°</span>
-
+                <footer>
+                    <div class="codedBy"><a href="https://github.com/maktub03/vanilla-weather-app"> Open-source code
+                        </a>by,
+                        <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/"> Panashe </a>
                     </div>
-                </div>
+                </footer>
+
             </div>
-            <footer>
-                <div class="codedBy"><a href="https://github.com/maktub03/vanilla-weather-app"> Open-source code </a>by,
-                    <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/"> Panashe </a>
-                </div>
-            </footer>
 
+
+
+
+
+            <script src="src/content.js"></script>
         </div>
-
-
-
-
-
-        <script src="src/content.js"></script>
-    </div>
     </div>
 </body>
 
