removed location button and made final visual edits

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         autofocus="on" id="search-text-input" />
                     <button class="magnifyingGlass"><img class="magnify" src="images/search.png"></button>
                     <!-- <input type="submit" class="citySearch" value="Search" /> -->
-                    <input type="submit" class="currentLocation" id="current-location" value="Current Location" />
+                    <!-- <input type="submit" class="currentLocation" id="current-location" value="Current Location" /> -->
 
                 </form>
 
@@ -73,25 +73,22 @@
                 </div>
             </div>
 
-
             <div class="weather-forecast" id="forecast">
-
-                <footer>
-                    <div class="codedBy"><a href="https://github.com/maktub03/vanilla-weather-app"> Open-source code
-                        </a>by,
-                        <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/"> Panashe </a>
-                    </div>
-                </footer>
 
             </div>
 
-
-
-
-
             <script src="src/content.js"></script>
         </div>
+
     </div>
+
+    <footer>
+        <div class="codedBy"><a href="https://github.com/maktub03/vanilla-weather-app" target="_blank"> Open-source code
+            </a>by,
+            <a href="https://www.linkedin.com/in/panashe-machiridza-14b561228/" target="_blank"> Panashe. </a> Hosted on
+            <a href="https://delightful-cannoli-2b8409.netlify.app/" target="_blank">Netlify</a>
+        </div>
+    </footer>
 </body>
 
 </html>
